add settings and fullscreen hotkey

--- a/resources/data/settings.json
+++ b/resources/data/settings.json
@@ -1,5 +1,5 @@
 {
-    "home_url": "https://lingmo.org",
-    "window_pos": "undefined",
-    "window_size": "undefined"
+    "homeUrl": "https://bing.com",
+    "windowPos": "undefined",
+    "windowSize": "undefined"
 }
